applications/tangled/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tangled
  labels:
    managed-by: argocd
