applications/tangled/httproute-did.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tangled-did
  namespace: tangled
spec:
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  hostnames:
    - id.tibor.sh
  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/did.json
      backendRefs:
        - name: tangled-did
          port: 80
